# splitwise-cli

./: Pipfile  README.md  pyproject.toml  setup.cfg
splitwisecli/: cli.py
test/: test_cli.py
