[metadata]
name = splitwise-cli
version = 0.1
author = Grzegorz Milka
author_email = gmilka91@gmail.com
description = A command line interface for Splitwise.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gregorias/splitwise-cli
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    click
    click-spinner
    splitwise

[options.entry_points]
console_scripts =
  splitwise-cli = splitwisecli.cli:main
